paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2b/sample_005/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2b/sample_005/target.rs:66:14
   |
66 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

warning: unused variable: `base`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2b/sample_005/target.rs:23:19
   |
23 | fn ranges_overlap(base: &[i32], n_total: usize, p_start: usize, q_start: usize, n: usize) -> bool {
   |                   ^^^^ help: if this is intentional, prefix it with an underscore: `_base`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.